<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maps.MapsFragment"
    android:background="@color/mediumGray"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="96dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_my_location_24"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permesso_richiesto"
            android:textColor="@color/white"
            android:fontFamily="@font/lobster"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appdispensa_richiede_l_accesso_alla_posizione_del_dispositivo"
            android:textColor="@color/white"
            android:fontFamily="@font/lobster"
            android:gravity="center_horizontal"
            android:layout_marginTop="36dp"/>

    </LinearLayout>

        <Button
            android:id="@+id/btnPermessoLoc"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_alignParentBottom = "true"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:text="@string/fornisci_permessi"
            android:clickable="true"
            android:layout_margin="15dp"
            android:focusable="true" />


</RelativeLayout>